@@ -1,5 +1,10 @@
 2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>
 
+	* vfslib.tcl: Applied contributed patch for bug 3412801.  Clean up watch
+	timers for memchan vfs.
+
+2011-11-28  Steve Huntley  <stephen.huntley@alum.mit.edu>
+
 	* zipvfs.tcl: Applied contributed patch for bug 3395782.  Enables 
 	extraction of contents of zip files created using Fossil.
 
